theaded comments demo

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="content">
+      <app-root></app-root>
+  </div>
+
 </body>
 </html>
